plugins {
	id 'org.springframework.boot' version '2.7.1'
	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
	id 'java'
}

version = '0.4.0'
group = 'com.EntertainmentViet'
sourceCompatibility = '17'

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

ext {
	springVersion = '2.7.1'
	hibernateVersion = '5.6.9.Final'
	hibernateTypeVersion = "2.17.1"
	queryDslVersion = '5.0.0'
	mapstructVersion = "1.5.2.Final"
	lombokVersion = "1.18.22"
	lombokMapstructBindingVersion = "0.2.0"
	commonLangVersion = "3.12.0"
	commonCollectionVersion = "4.4"
	commonTextVersion = "1.9"
	springDocVersion = "1.6.9"
}

dependencies {
	implementation "org.springframework.boot:spring-boot-starter-data-jpa:${springVersion}"
	implementation "com.vladmihalcea:hibernate-types-55:${hibernateTypeVersion}"
	implementation "org.hibernate:hibernate-spatial:${hibernateVersion}"
	implementation "org.flywaydb:flyway-core"
	implementation "com.bedatadriven:jackson-datatype-jts:2.4"
	implementation 'org.wololo:jts2geojson:0.18.1'
	annotationProcessor 'org.hibernate:hibernate-jpamodelgen'

	// QueryDsl
	implementation "com.querydsl:querydsl-core:${queryDslVersion}"
	implementation "com.querydsl:querydsl-jpa:${queryDslVersion}"
	annotationProcessor "com.querydsl:querydsl-apt:${queryDslVersion}:jpa"
	annotationProcessor "org.springframework.boot:spring-boot-starter-data-jpa:${springVersion}"
	annotationProcessor "com.querydsl:querydsl-apt:${queryDslVersion}:general"

	implementation "org.springframework.boot:spring-boot-starter-web:${springVersion}"
	implementation "org.springframework.boot:spring-boot-starter-validation:${springVersion}"
	implementation "org.springframework.boot:spring-boot-starter-security:${springVersion}"
	implementation "org.springframework.boot:spring-boot-starter-oauth2-resource-server:${springVersion}"

	implementation 'org.apache.httpcomponents:httpclient'
	implementation "org.apache.commons:commons-lang3:${commonLangVersion}"
	implementation "org.apache.commons:commons-collections4:${commonCollectionVersion}"
	implementation "org.apache.commons:commons-text:${commonTextVersion}"

	// Lombok + Mapstruct
	implementation "org.projectlombok:lombok-mapstruct-binding:${lombokMapstructBindingVersion}"
	compileOnly "org.projectlombok:lombok:${lombokVersion}"
	compileOnly "org.mapstruct:mapstruct:${mapstructVersion}"
	annotationProcessor "org.projectlombok:lombok:${lombokVersion}"
	annotationProcessor "org.mapstruct:mapstruct-processor:${mapstructVersion}"

	// Spring docs
	implementation "org.springdoc:springdoc-openapi-ui:${springDocVersion}"

	runtimeOnly "org.postgresql:postgresql"
	testImplementation "org.springframework.boot:spring-boot-starter-test:${springVersion}"
	testImplementation "org.springframework.security:spring-security-test"
}

tasks.named('test') {
	useJUnitPlatform()
}

task stage(dependsOn: ['build', 'clean'])
build.mustRunAfter clean